--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <div class="relative flex items-center justify-between lg:justify-center lg:space-x-16">
                     <ul class="flex items-center hidden space-x-8 lg:flex">
                         <li><a href="/" aria-label="Our product" title="Our product"
-                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Product</a>
+                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Quienes somos</a>
                         </li>
                         <li><a href="/" aria-label="Our product" title="Our product"
-                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Features</a>
+                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Programa de aprendizaje</a>
                         </li>
                         <li><a href="/" aria-label="Product pricing" title="Product pricing"
-                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">hola a todo</a>
+                                class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">links</a>
                         </li>
                     </ul>
                     <a href="/" aria-label="Company" title="Company" class="inline-flex items-center">
